--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "vue": "^2.6.10",
     "vue-prism-editor": "^0.3.0",
     "vue-router": "^3.1.3",
-    "vuelidate": "^0.7.4"
+    "vuelidate": "^0.7.4",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
