--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,10 @@ stages:
   - tag
 
 env:
-  - IMAGE="fairdata/admin-panel-client" \
-    IMAGE_TAG="$IMAGE:$TRAVIS_COMMIT" \
-    IMAGE_TAG_BRANCH="$IMAGE:"`echo $TRAVIS_BRANCH | sed 's#/#-#g'` \
+  - PRIVATE_IMAGE="$PRIVATE_DOCKER_REGISTRY/admin-panel-client" \
+    IMAGE="fairdata/admin-panel-client" \
+    IMAGE_TAG="$PRIVATE_IMAGE:$TRAVIS_COMMIT" \
+    IMAGE_TAG_BRANCH="$PRIVATE_IMAGE:"`echo $TRAVIS_BRANCH | sed 's#/#-#g'` \
     IMAGE_TAG_DEVELOP="$IMAGE:develop" \
     IMAGE_TAG_LATEST="$IMAGE:latest"
 
@@ -28,6 +29,7 @@ cache:
 
 before_script:
   - docker login -u "$DOCKER_USER" -p "$DOCKER_PASSWORD"
+  - docker login -u "$PRIVATE_DOCKER_USER" -p "$PRIVATE_DOCKER_PASSWORD" "$PRIVATE_DOCKER_REGISTRY"
 
 jobs:
   include:
@@ -39,7 +41,7 @@ jobs:
 
     - stage: tag
       if: (branch = develop) AND (NOT (type IN (pull_request)))
-      install: false
+      install: skip
       script:
         - docker pull $IMAGE_TAG
         - docker image tag $IMAGE_TAG $IMAGE_TAG_DEVELOP
@@ -47,7 +49,7 @@ jobs:
 
     - stage: tag
       if: (branch = master) AND (NOT (type IN (pull_request)))
-      install: false
+      install: skip
       script:
         - docker pull $IMAGE_TAG
         - docker image tag $IMAGE_TAG $IMAGE_TAG_LATEST
@@ -55,7 +57,7 @@ jobs:
 
     - stage: tag
       if: (type = push)
-      install: false
+      install: skip
       script:
         - docker pull $IMAGE_TAG
         - docker image tag $IMAGE_TAG $IMAGE_TAG_BRANCH
